--- a/docs/assets/css/style.scss
+++ b/docs/assets/css/style.scss
@@ -5,3 +5,8 @@
 
 /* Put any custom CSS below this line */
 
+.page-header .project-name {
+  font-family: "Montserrat", "Helvetica Neue", Arial, sans-serif;
+  font-weight: 700;
+}
+
