--- a/docs/assets/css/style.scss
+++ b/docs/assets/css/style.scss
@@ -8,5 +8,6 @@
 .page-header .project-name {
   font-family: "Montserrat", "Helvetica Neue", Arial, sans-serif;
   font-weight: 700;
+  background-image: linear-gradient(120deg, #0b1021, #7c3aed, #f43f5e);
 }
 
